fixed the version of ffmpeg to use - using the new 1.0 version